--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
+    "mysql2": "^3.11.3",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
