--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/mysql": "^2.15.26",
+    "@types/nodemailer": "^6.4.16",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
@@ -29,13 +31,16 @@
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
+    "nodemailer": "^6.9.15",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.5",
     "@types/nodemon": "^1.19.6",
+    "@types/uuid": "^10.0.0",
     "typescript": "^5.6.2"
   }
 }
