add news and servers API

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/express-session": "^1.18.0",
     "@types/mysql": "^2.15.26",
     "@types/nodemailer": "^6.4.16",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
