--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/multer": "^1.4.12",
     "@types/mysql": "^2.15.26",
     "@types/nodemailer": "^6.4.16",
     "axios": "^1.7.7",
@@ -30,6 +31,7 @@
     "express-session": "^1.18.0",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
     "nodemailer": "^6.9.15",
