--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "build": "rimraf ./build && npx tsc",
     "start": "npm run build && node build/index",
     "dev": "npx nodemon",
-    "lint": "npx eslint ./src",
-    "format": "npx eslint ./src --fix"
+    "lint": "eslint .",
+    "format": "npx eslint ./src --fix",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "@types/cors": "^2.8.17",
@@ -26,7 +27,7 @@
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5", 
+    "cors": "^2.8.5",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
     "express-validator": "^7.2.0",
@@ -38,13 +39,20 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.12.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.5",
     "@types/nodemon": "^1.19.6",
     "@types/uuid": "^10.0.0",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.10.0",
+    "prettier": "^3.3.3",
     "typescript": "^5.6.2",
+    "typescript-eslint": "^8.8.1",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
   }
