--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "main": "index.js",
   "type": "module",
   "husky": {
-    "pre-commit": "npm run lint"
+    "pre-commit": "npm run lint && npm run prettier"
   },
   "scripts": {
     "build": "rimraf ./build && npx tsc",
     "start": "npm run build && node build/index",
-    "dev": "npx nodemon",
+    "dev": "npx nodemon src/index.ts",
     "lint": "eslint .",
-    "format": "npx eslint ./src --fix",
-    "prettier": "prettier --write ."
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write \"./src/**/*.{js,ts,json,css,md}\"",
+    "prettier": "prettier --check \"./src/**/*.{js,ts,json,css,md}\""
   },
   "dependencies": {
     "@types/cors": "^2.8.17",
@@ -34,23 +35,25 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.11.3",
+    "mysql2": "^3.11.5",
     "nodemailer": "^6.9.15",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.12.0",
+    "@eslint/js": "^9.17.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.5",
     "@types/nodemon": "^1.19.6",
     "@types/uuid": "^10.0.0",
-    "eslint": "^9.12.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
+    "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.10.0",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.2",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.8.1",
     "webpack": "^5.95.0",
